# controllers/user.js
@@ -1,49 +1,124 @@
-const mongodb = require('../db/connect');
-const ObjectId = require('mongodb').ObjectId;
+
+const passwordUtil = require('../util/passwordComplexityCheck');
+const db = require('../models');
+const User = db.user;
+
 
 const getAll = async (req, res) => {
-  const result = await mongodb.getDb().db().collection('user').find();
-  result.toArray().then((lists) => {
-    res.setHeader('Content-Type', 'application/json');
-    res.status(200).json(lists);
-  });
+  try {
+    User.find({})
+    .then((data) => {
+      res.status(200).send(data);
+    })
+    .catch((err) => {
+      res.status(500).send({
+         message: err.message || 'Some error occured while retrieving users.'
+      });
+    });
+} catch (err) {
+  res.status(500).json(err);
+  }
 };
 
 const getSingle = async (req, res) => {
-  const userId = new ObjectId(req.params.id);
-  const result = await mongodb.getDb().db().collection('user').find({ _id: userId });
-  result.toArray().then((lists) => {
-    res.setHeader('Content-Type', 'application/json');
-    res.status(200).json(lists[0]);
-  });
+  try {
+    const username = req.params.username;
+    User.find({ username: username })
+    .then((data) => {
+      res.status(200).send(data);
+    })
+    .catch((err) => {
+      res.status(500).send({
+         message: err.message || 'Some error occured while retrieving users'
+      });
+    });
+  } catch (err) {
+    res.status(500).json(err);
+  }
 };
 
 const createUser = async (req, res) => {
-  const user = {
-    userName: req.body.userName,
-    firstName: req.body.firstName,
-    lastName: req.body.lastName,
-    password: req.body.password,
-    email: req.body.email,
-    phone: req.body.phone,
-    designation: req.body.designation
-  };
-  const response = await mongodb.getDb().db().collection('user').insertOne(user);
-  if (response.acknowledged) {
-    res.status(201).json(response);
-  } else {
-    res.status(500).json(response.error || 'Some error occurred while creating the contact.');
+  try {
+    if (!req.body.userName || !req.body.password || !req.body.firstName || !req.body.lastName 
+      || !req.body.email || !req.body.phone || !req.body.designation) {
+        res.status(400).send({ message: "Content can not be empty!" });
+        return;
+      }
+      const password = req.body.password;
+      const passwordCheck = passwordUtil.passwordPass(password);
+      if (passwordCheck.error) {
+        res.status(400).send({ message: passwordCheck.error });
+        return;
+      }
+  const user = new User(req.body);
+  user
+    .save()
+    .then((data) => {
+      console.log(data);
+      res.status(201).send(data);
+    })
+    .catch((err) => {
+      res.status(500).send({ message: err.message || 'Some error occured while creating the user.'
+    });
+
+    });
+} catch (err) {
+  res.status(500).json(err);
+}
+};
+
+const updateUser = async (req, res) => {
+  try {
+    const username = req.params.username;
+    if (!username) {
+      res.status(400).send({ message: 'Invalid Username Supplied' });
+      return;
+    }
+    const password = req.body.password;
+    const passwordCheck = passwordUtil.passwordPass(password);
+    if (passwordCheck.error) {
+      res.status(400).send({ message: passwordCheck.error });
+      return;
+    }
+    User.findOne({ username: username }, function (err, user) {
+      user.username = req.params.username;
+      user.password = req.body.password;
+      user.firstName = req.body.firstName;
+      user.lastName = req.body.lastName;
+      user.email = req.body.email;
+      user.phone = req.body.phone;
+      user.designation = req.body.designation;
+      user.save(function (err) {
+        if  (err) {
+          res.status(500).json(err || 'Some error occured while updating the contact');
+
+        } else {
+          res.status(204).send();
+        }
+      });
+    });
+  } catch (err) {
+    res.status(500).json(err);
   }
 };
 
 const deleteUser = async (req, res) => {
-  const userId = new ObjectId(req.params.id);
-  const response = await mongodb.getDb().db().collection('contacts').remove({ _id: userId }, true);
-  console.log(response);
-  if (response.deletedCount > 0) {
-    res.status(204).send();
-  } else {
-    res.status(500).json(response.error || 'Some error occurred while deleting the contact.');
+  try {
+    const username = req.params.username;
+    if (username) {
+      res.status(400).send({ message: 'Invalid Username Supplied' });
+      return;
+    }
+
+    User.deleteOne({ username: username }, function (err, result) {
+      if (err) {
+        res.status(500).json(err || 'Some error occurred while deleting the contact.');
+      } else {
+        res.status(204).send(result);
+      }
+    });
+  } catch (err) {
+    res.status(500).json(err || 'Some error occurred while deleting the contact.');
   }
 };
 
@@ -51,5 +126,6 @@ module.exports = {
   getAll,
   getSingle,
   createUser,
+  updateUser,
   deleteUser
 };
